<resources>
    <string name="app_name">SafeBites</string>
    <string name="app_description" translatable="false">SafeBites is an application that allows you to quickly and easily discover the nutritional values of a food, in order to decide if it is suitable for your personal consumption, as well as making a quick comparison between two products to analyse which is healthier.</string>
    <string name="user_cancellation">Sign in canceled by the user</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="successful_registration">User %1$s has been registered in SafeBites!</string>
    <string name="welcome_message">Welcome back to SafeBites %1$s!</string>
    <string name="modified_allergens">Changes in the user\'s allergens have been saved</string>
    <string name="scan_cancellation">Scan canceled by the user</string>
    <string name="error_during_scanning">Error during scanning</string>
    <string name="product_not_found">Product not found</string>
    <string name="enter_search_recommendation">You must enter a search</string>
    <string name="error_during_comparison_1">There is no product saved as favorite to make the comparison</string>
    <string name="error_during_comparison_2">There are not enough products saved as a favorite to make the comparison</string>
    <string name="no_registered_ingredients">There are no registered ingredients for this product</string>
    <string name="alert_dialog_positive_button" translatable="false">OK</string>
    <string name="alert_dialog_negative_button">Cancel</string>
    <string name="save_data_alert_dialog_title">Information:</string>
    <string name="save_data_alert_dialog_message_1">Are you sure you want to save the changes made to your allergies?</string>
    <string name="save_data_alert_dialog_message_2">Are you sure you want to create the user %1$s with email %2$s?</string>
    <string name="delete_user_alert_dialog_title">Warning:</string>
    <string name="delete_user_alert_dialog_message">This action cannot be undone. Are you sure you want to delete the user %1$s with email %2$s?"</string>
    <string name="no_products_found"> No products found</string>
    <string name="standard_size_in_millimeters" translatable="false">100 ml</string>
    <string name="unfit_product">Unfit</string>
    <string name="suitable_product">Suitable</string>
    <string name="comparing_text">Comparing&#8230;</string>
    <string name="scanning_text">Scanning&#8230;</string>
    <string name="enter_barcode">Enter a barcode:</string>
    <string name="nutrients">Nutrients:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="no_favorite_products">No favorite products</string>
    <string name="enter_search">Enter a search</string>
    <string name="product_A">Product A</string>
    <string name="product_B">Product B</string>
    <string name="product_image_description">Product image</string>
    <string name="ingredients_A">Ingredients A</string>
    <string name="product_image_A_description">Product image A</string>
    <string name="ingredients_B">Ingredients B</string>
    <string name="product_image_B_description">Product image B</string>
    <string name="standard_size_in_grams" translatable="false">100 g</string>
    <string name="per_portion">Per portion</string>
    <string name="save_image_button_description">Save image button</string>
    <string name="scan_button">Scan&#160;&#160;&#160;</string>
    <string name="scan_button_description">Scan button</string>
    <string name="back_button">Back</string>
    <string name="back_button_description">Back button</string>
    <string name="create_user_button">Create user</string>
    <string name="save_data_button">Save data</string>
    <string name="save_data_button_description">Floating save data button</string>
    <string name="delete_user_button">Delete user</string>
    <string name="compare_button_description">Compare button</string>
    <string name="delete_data_button_description">Floating delete data button</string>
    <string name="comparison_1">Compare two scanned products</string>
    <string name="comparison_2">Compare two favorite products</string>
    <string name="comparison_3">Compare a scanned product and a favorite product </string>
    <string name="compare">Compare</string>
    <string name="allergies_text_view">Allergies</string>
    <string name="danger_zone_text_view">Danger zone</string>
    <string name="zxing_informer">Enter manually or place a bar code inside the rectangle of the viewfinder to scan.</string>
    <string name="item_scan">Scan</string>
    <string name="item_cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_image">Navigation header image</string>
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_user">User</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_log_out">Log out</string>
    <string name="nav_others">Others</string>
    <string name="nav_share">Share</string>
    <string name="nav_information">Information</string>
    <string name="nav_header_subtitle_display_name" translatable="false">Display name</string>
    <string name="nav_header_subtitle_email" translatable="false">eMail</string>
    <string name="accompanying_message">"Hey buddy! Take a look at this new and incredible app:"</string>
    <string name="github_url" translatable="false">https://github.com/maneletorres/SafeBitesV3</string>
    <string name="chooser_message">Choose where you want to share SafeBites App:</string>
    <string name="scan_fragment">"Scan"</string>
    <string name="search_fragment">Search</string>
    <string name="compare_fragment">Compare</string>
    <string name="favorites_fragment">Favorites</string>
    <string name="nutrients_fragment">Nutrients</string>
    <string name="ingredients_fragment">Ingredients</string>
    <string name="nutrients_comparison_fragment">Nutrients comparison</string>
    <string name="ingredients_comparison_fragment">Ingredients comparison</string>
    <string name="gluten_allergy">Gluten</string>
    <string name="crustaceans_allergy">Crustaceans</string>
    <string name="eggs_allergy">Eggs</string>
    <string name="fish_allergy">Fish</string>
    <string name="peanuts_allergy">Peanuts</string>
    <string name="soybeans_allergy">Soybeans</string>
    <string name="milk_allergy">Milk</string>
    <string name="nuts_allergy">Nuts</string>
    <string name="celery_allergy">Celery</string>
    <string name="mustard_allergy">Mustard</string>
    <string name="sesame_seeds__allergy">Sesame seeds</string>
    <string name="sulphur_dioxide_and_sulphites_allergy">Sulphur dioxide and sulphites</string>
    <string name="lupin_allergy">Lupin</string>
    <string name="molluscs_allergy">Molluscs</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated fat</string>
    <string name="monounsaturated_fat">Monounsaturated fat</string>
    <string name="polyunsaturated_fat">Polyunsaturated fat</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="sugars">Sugars</string>
    <string name="polyols">Polyols</string>
    <string name="starch">Starch</string>
    <string name="fiber">Fiber</string>
    <string name="proteins">Proteins</string>
    <string name="salt">Salt</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="vitamin_e">Vitamin E</string>
    <string name="vitamin_k">Vitamin K</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="vitamin_b1">Vitamin B1</string>
    <string name="vitamin_b2">Vitamin B2</string>
    <string name="vitamin_b3">Vitamin B3</string>
    <string name="vitamin_b6">Vitamin B6</string>
    <string name="vitamin_b9">Vitamin B9</string>
    <string name="vitamin_b12">Vitamin B12</string>
    <string name="biotin">Biotin</string>
    <string name="pantothenic_acid">Pantothenic acid</string>
    <string name="potassium">Potassium</string>
    <string name="chloride">Chloride</string>
    <string name="calcium">Calcium</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="magnesium">Magnesium</string>
    <string name="iron">Iron</string>
    <string name="zinc">Zinc</string>
    <string name="copper">Copper</string>
    <string name="manganese">Manganese</string>
    <string name="fluoride">Fluoride</string>
    <string name="selenium">Selenium</string>
    <string name="chromium">Chromium</string>
    <string name="molybdenum">Molybdenum</string>
    <string name="iodine">Iodine</string>
    <string name="sodium">Sodium</string>
    <string name="casein">Casein</string>
    <string name="serum_proteins">Serum proteins</string>
    <string name="nucleotides">Nucleotides</string>
    <string name="sucrose">Sucrose</string>
    <string name="glucose">Glucose</string>
    <string name="fructose">Fructose</string>
    <string name="lactose">Lactose</string>
    <string name="maltose">Maltose</string>
    <string name="maltodextrins">Maltodextrins</string>
    <string name="butyric_acid">Butyric acid</string>
    <string name="caproic_acid">Caproic acid</string>
    <string name="caprylic_acid">Caprylic acid</string>
    <string name="capric_acid">Capric acid</string>
    <string name="lauric_acid">Lauric acid</string>
    <string name="myristic_acid">Myristic acid</string>
    <string name="palmitic_acid">Palmitic acid</string>
    <string name="stearic_acid">Stearic acid</string>
    <string name="arachidic_acid">Arachidic acid</string>
    <string name="behenic_acid">Behenic acid</string>
    <string name="lignoceric_acid">Lignoceric acid</string>
    <string name="cerotic_acid">Cerotic acid</string>
    <string name="montanic_acid">Montanic acid</string>
    <string name="melissic_acid">Melissic acid</string>
    <string name="omega_3_fat">Omega-3 fat</string>
    <string name="alpha_linolenic_acid">Alpha-linolenic acid</string>
    <string name="eicosapentaenoic_acid">Eicosapentaenoic acid</string>
    <string name="docosahexaenoic_acid">Docosahexaenoic acid</string>
    <string name="omega_6_fat">Omega-6 fat</string>
    <string name="linoleic_acid">Linoleic acid</string>
    <string name="arachidonic_acid">Arachidonic acid</string>
    <string name="gamma_linolenic_acid">Gamma-linolenic acid</string>
    <string name="dihomo_gamma_linolenic_acid">Dihomo-gamma-linolenic acid</string>
    <string name="omega_9_fat">Omega-9 fat</string>
    <string name="oleic_acid">Oleic acid</string>
    <string name="elaidic_acid">Elaidic acid</string>
    <string name="gondoic_acid">Gondoic acid</string>
    <string name="mead_acid">Mead acid</string>
    <string name="erucic_acid">Erucic acid</string>
    <string name="nervonic_acid">Nervonic acid</string>
    <string name="trans_fat">Trans fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="alcohol">Alcohol</string>
    <string name="silica">Silica</string>
    <string name="bicarbonate">Bicarbonate</string>
    <string name="caffeine">Caffeine</string>
    <string name="taurine">Taurine</string>
    <string name="ph">PH</string>
    <string name="app_mentions" translatable="false">This project is based on the Open Food Facts group database and uses the ZXing library ("Zebra Crossing"), to which their enormous work and fantastic initiative are appreciated, making reference to them in the following links:</string>
    <string name="mention1" translatable="false"><a href="some site">https://world.openfoodfacts.org/</a></string>
    <string name="mention2" translatable="false"><a href="some site">https://github.com/zxing/zxing</a></string>
</resources>