<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/appbar"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="@dimen/list_item_width"
        android:layout_height="@dimen/list_item_height"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/food_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/app_description"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/app_mentions"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/app_mention1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:text="@string/mention1"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/app_mention2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/mention2"
        android:textAlignment="center" />

</LinearLayout>