<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buttons_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/scan_button_description"
            android:drawableEnd="@drawable/ic_barcode_scan_black_24dp"
            android:drawableRight="@drawable/ic_barcode_scan_black_24dp"
            android:text="@string/scan_button" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/scan_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/scan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_progress_bar"
        android:layout_centerInParent="true"
        android:background="#00000000"
        android:text="@string/scanning_text"
        android:visibility="gone" />

</RelativeLayout>